DFR-471: Fortify Setup (#609)
* DFR-471: Fortify Setup

* DFR-471: Upgrade helm